# VeriFS2

./: .gitignore  README.md
src/: CMakeLists.txt  common.h  copy_bench.cpp  directory.cpp  directory.hpp  directory_bench.cpp  file.hpp  fuse_cpp_ramfs.cpp  fuse_cpp_ramfs.hpp  inode.cpp  inode.hpp  main.cpp  special_inode.hpp  symlink.hpp  util.cpp
src/include/contiguous/: map.h  multimap.h  multiset.h  set.h
src/include/contiguous/internal/: adl_swap.h  container_traits.h  contiguous_base.h  contiguous_internal.h  contiguous_multi_base.h  contiguous_settings.h  contiguous_single_base.h  is_transparent.h  iterators.h  wrapped_pair.h  wrapped_pair_compare.h
